extra space on right side issue fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,7 @@ app-navbar {
 
 app-introwave {
   margin-top: 60px;
+  width: 100%;
 }
 
 body {
