--- a/src/app/introwave/introwave.component.css
+++ b/src/app/introwave/introwave.component.css
@@ -69,6 +69,8 @@
   /* z-index: 1; */
   animation: transitionIn 1.5s;
   padding-bottom: 30px;
+  display: block;
+  overflow: hidden;
 }
 
 #mainheading-container {
@@ -99,8 +101,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 20px;
     row-gap: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    padding-right: 30px;
     margin-top: 10px;
     margin-bottom: 20px;
   }
@@ -153,13 +154,14 @@
   visibility: hidden;
   animation: typing 2s steps(30) 1.5s forwards;
   font-family: 'Montserrat', sans-serif;
-
 }
 
 .fade{
   visibility: visible;
   animation: fade-out-down 0.2s cubic-bezier(0,0,0,2) forwards;
   animation-timeline: scroll();
+  margin-right: 0px;
+  padding-right: 0px;
   
 }
 
@@ -209,7 +211,7 @@
   column-gap: 40px;
   row-gap: 20px;
   margin-left: 30px;
-  margin-right: 30px;
+  padding-right: 30px;
   margin-top: 90px;
   column-gap: 20px;
 }
@@ -219,6 +221,7 @@
     grid-template-columns: 1fr 1fr;
     margin-top: 40px;
     margin-left: 10px;
+    padding-right: 20px;
     margin-right: 10px;
     padding-bottom: 90px;
     column-gap: 20px;
