--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,9 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
-
 .navbar {
   background: rgba(255, 255, 255, 0.192);
   backdrop-filter: blur(10px);
@@ -11,6 +5,7 @@ body {
   align-items: center;
   height: 80px;
   padding: 0 30px;
+  font-family: Arial, sans-serif;
 }
 
 .logo {
